# thesis

./: CMakeLists.txt  PG_manager.py  README.md  change_trajectory_my_choice.py  gnc_individual_error.cpp  gnc_optimizer.cpp  pipeline.py  pipeline1.py  pipeline10.py  pipeline11.py  pipeline12.py  pipeline2.py  pipeline3.py  pipeline4.py  pipeline5.py  pipeline6.py  pipeline7.py  pipeline8.py  pipeline9.py
